--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
         </article>
         <div2 class="centered-div">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/12o2y0taU8Y?si=_8fz0EYuBUvvAPbY"
-                title="YouTube video player" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/12o2y0taU8Y?si=_8fz0EYuBUvvAPbY" title="YouTube video player"
+                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </div2>
@@ -81,6 +81,25 @@
                     in jou tot leven te brengen.</p>
             </article>
         </div3>
+        <div4>
+            <article>
+                <header>
+                    <h3>Een samenvatting van de lange reis</h3>
+                </header>
+
+        </div4>
+
+        <iframe src="https://www.youtube.com/embed/ATLemL6xlmA?si=hGAVCOmleVqPNBaa" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <P>Deze video is meer youtube vriendelijk. het is een veel kortere versie van de video. In deze video gaat hij
+            wat dieper in op zijn reis over de pukaswa rivier. In deze spannende video, neemt Xander Budnick je mee op
+            een avontuur van 13 dagen, waarin hij kampeert aan een rivier en een binnenlandse zee verkent. Het begint
+            allemaal met een uitdagend begin, en in dit eerste deel van het avontuur zal je getuige zijn van de ruwe
+            start die Xander en zijn team moeten overwinnen. Laat je meeslepen door de prachtige natuur, de uitdagingen
+            en de opwinding terwijl ze beginnen aan een onvergetelijke reis. </P>
+        </article>
 
 
 </body>
